@@ -1,0 +1,2 @@
+prog: varinforestrict
+vgopts: -q --read-var-info=yes
